--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Zane Gyorko
+subtitle: My name is Zane and this is my Website
 use-site-title: true
+bigimg:
+  - "/img/sebastian-bridge.png" : "Sebastian Inlet, FL"
+  - "/img/uss-intrepid.jpg" : "USS Intrepid, NY"
+  - "/img/tennesse-2018.jpg" : "Tennessee, Summer 2018"
+  - "/img/yellowstone.jpg" : "Old Faithful, Yellowstone"
+  - "/img/fedex-field" : "FedEx Field, Landover MD"
 ---
 
 <div class="posts-list">
