fixed large photos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ bigimg:
   - "/img/sebastian-bridge.png" : "Sebastian Inlet, FL"
   - "/img/uss-intrepid.jpg" : "USS Intrepid, NY"
   - "/img/tennesse-2018.jpg" : "Tennessee, Summer 2018"
-  - "/img/yellowstone.jpg" : "Old Faithful, Yellowstone"
-  - "/img/fedex-field" : "FedEx Field, Landover MD"
+  - "/img/yellowstone.JPG" : "Old Faithful, Yellowstone"
+  - "/img/fedex-field.jpg" : "FedEx Field, Landover MD"
 ---
 
 <div class="posts-list">
