--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ use-site-title: true
 bigimg:
   - "/img/sebastian-bridge.png" : "Sebastian Inlet, FL"
   - "/img/uss-intrepid.jpg" : "USS Intrepid, NY"
-  - "/img/tennesse-2018.jpg" : "Tennessee, Summer 2018"
+  - "/img/tennessee-2018.jpg" : "Tennessee, Summer 2018"
   - "/img/yellowstone.JPG" : "Old Faithful, Yellowstone"
   - "/img/fedex-field.jpg" : "FedEx Field, Landover MD"
 ---
