xa project initial

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Zane Gyorko
-subtitle: My name is Zane and this is my Website
+subtitle: My name is Zane. This is my Website
 use-site-title: true
 bigimg:
   - "/img/sebastian-bridge.png" : "Sebastian Inlet, FL"
